[package]
name = "devenv"
version = "0.1.0"
authors = ["Mohamed Shadhaan <shadhanm@icloud.com>"]
description = "Devenv stuff"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
clap_complete = "4.4.5"
enigo = "0.1.3"
rust_search = "2.1.0"
